--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ a {
 }
 
 header h1 {
+  margin-bottom: 30px;
   text-align: center;
   color: rgba(255, 114, 92, 0.9);
 }
@@ -25,21 +26,28 @@ header h1 {
 }
 
 main {
-  height: 70vh;
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-around;
 }
 
 footer {
+  margin-top: 10vw;
+  display: flex;
+  justify-content: center;
   text-align: center;
-  font-style: oblique;
-  color: white;
-  font: normal 12pt Arial;
+  font: lighter 12pt Arial;
 }
 
-footer p a {
-  text-decoration: none; color: inherit;
+footer p {
+  width: 125px;
+  padding: 20px 20px;
+  border-radius: 10px 80px;
+  background-color: rgba(255, 114, 92, 0.9);
+  box-shadow: 2px 2px 20px rgba(255, 114, 92, 0.5);
+}
+
+footer p, footer a {
+  color: rgba(255, 255, 255, 0.9);
 }
 
 .bg, .bgEstiloEscuro{
@@ -52,8 +60,6 @@ footer p a {
   width: 100vw;
   
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size:cover;
 
   -webkit-filter: blur(5px);
   filter: blur(5px);
@@ -79,14 +85,13 @@ footer p a {
   left: 0;
   right: 0;
   z-index: 100;
-  position: fixed;
+  position: absolute;
 }
 
 #freepik {
   display: flex;
   justify-content: space-between;
-  padding: 5px 20px;
-  margin-top: 10px;
+  padding: 10px 20px;
   font: normal 7pt Arial;
 }
 #freepikEm {
@@ -164,8 +169,15 @@ footer p a {
 }
 
 @media only screen and (max-width: 800px) {
-  .main00 {
-    width: auto;
+  header h1 {
+    margin-top: 20px;
+    margin-bottom: 40px;
+  }
+  main {
+    flex-direction: column;
+  }
+  footer {
+    margin-top: 15vw;
   }
   #freepik {
     align-items: center;
