--- a/index.css
+++ b/index.css
@@ -3,10 +3,6 @@ body {
   font: normal 10pt Arial;
 }
 
-input[type=number] {
-  -moz-appearance:textfield;
-}
-
 abbr[title] {
   text-decoration: none;
 }
@@ -18,11 +14,11 @@ a {
 header h1 {
   margin-bottom: 30px;
   text-align: center;
-  color: rgba(255, 114, 92, 0.9);
+  color: rgba(255, 114, 92, 0.7);
 }
 
 .h1EstiloEscuro {
-  color: white;
+  color: rgba(255, 255, 255, 0.97);
 }
 
 main {
@@ -42,7 +38,7 @@ footer p {
   width: 125px;
   padding: 20px 20px;
   border-radius: 10px 80px;
-  background-color: rgba(255, 114, 92, 0.9);
+  background-color: rgba(255, 114, 92, 0.87);
   box-shadow: 2px 2px 20px rgba(255, 114, 92, 0.5);
 }
 
@@ -61,24 +57,19 @@ footer p, footer a {
   
   background-repeat: no-repeat;
 
-  -webkit-filter: blur(5px);
   filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-
   transition:filter .5s ease;
   backface-visibility: hidden;
 }
 
 .bg {
   z-index: 1;
-  background-image: url('./bg-imagem-ambiente-web.jpg');
+  background-image: url('./src/bg-imagem-ambiente-web.jpg');
 }
 
 .bgEstiloEscuro {
   z-index: 50;
-  background-color: rgba(0, 0, 0, 0.377);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .main00 {
@@ -94,21 +85,31 @@ footer p, footer a {
   padding: 10px 20px;
   font: normal 7pt Arial;
 }
-#freepikEm {
-  color: rgb(4, 193, 240);
+.freepikEm {
+  color: rgb(4, 193, 240, 0.7);
 }
-#freepikStrong {
+.freepikStrong {
+  color: rgba(255, 114, 92, 0.9);
+}
+.freepikEmEstiloEscuro {
+  color: rgba(255, 255, 255, 0.87);
+}
+.freepikStrongEstiloEscuro {
   color: rgba(255, 114, 92, 0.9);
 }
 
-#main01, #main02, #main03 {
+.mainEstilo, .mainEstiloEscuro {
   margin: auto;
   margin-top: 35px;
   width: 310px;
   padding: 20px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.77);
   border-radius: 10px; 
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.377);
+}
+
+.mainEstiloEscuro {
+  background-color: rgb(48, 105, 122, 0.7);
 }
 
 #areaLinkHTML, #areaLinkCSS, #areaLinkCursos {
@@ -121,8 +122,8 @@ footer p, footer a {
   width: 75px;
   margin-top: -40px; 
   padding: 5px 5px; 
-  color: white;
-  background-color: rgb(4, 193, 240);
+  color: rgba(255, 255, 255, 0.87);
+  background-color: rgb(4, 193, 240, 0.77);
   text-align: center;
   font: normal 12pt Verdana;
   border-radius: 20px; 
@@ -137,9 +138,9 @@ footer p, footer a {
   cursor: pointer;
   font: normal 10pt Arial;
   border: none;
-  color: white;
-  background-color: rgba(255, 114, 92, 100);
-  box-shadow: 2px 2px 10px rgba(255, 114, 92, 100);
+  color: rgba(255, 255, 255, 0.87);
+  background-color: rgba(255, 114, 92, 0.9);
+  box-shadow: 2px 2px 10px rgba(255, 114, 92, 0.9);
   text-align: center;
 }
 
@@ -150,7 +151,7 @@ footer p, footer a {
   cursor: pointer;
   font: normal 10pt Arial;
   border: none;
-  color: white;
+  color: rgba(255, 255, 255, 0.97);
   text-align: center;
 }
 
