--- a/cursos/HTML5CSS3-na-pratica-02-Curso-HTML5-para-quem-nao-sabe-nada-de-HTML5/gabrielf7/src/index.css
+++ b/cursos/HTML5CSS3-na-pratica-02-Curso-HTML5-para-quem-nao-sabe-nada-de-HTML5/gabrielf7/src/index.css
@@ -1,3 +1,16 @@
+.localDoSite {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.localDoSite h2 {
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: rgba(255, 255, 255, 1);
+  background-color: rgb(36, 41, 47, 1);
+  box-shadow: 2px 2px 10px rgb(36, 41, 47, 0.5);
+}
+
 .linksConteudo {
   margin-top: 30px;
   margin-bottom: 30px;
