--- a/cursos/HTML5CSS3-na-pratica-01-Curso-em-Video/Módulo-02/cap-13-17/Cap16-grouping-tags/grouping-tags.css
+++ b/cursos/HTML5CSS3-na-pratica-01-Curso-em-Video/Módulo-02/cap-13-17/Cap16-grouping-tags/grouping-tags.css
@@ -2,16 +2,11 @@
   Sobre o box-shadow "1px 1px 1px black", significam respetivamente: deslocamento horizontal, deslocamento vertical, espalhamento e sombra.
 */
 
-<<<<<<< HEAD
-=======
 /* Seletores que repete atribuições */
->>>>>>> fda7cdfa3a436e80f64833253311ad9485600758
 body, footer, footer > p {
   margin: 0;
 }
 
-<<<<<<< HEAD
-=======
 header, main {
   margin: 10px;
   padding: 10px;
@@ -23,7 +18,6 @@ header, nav {
 }
 
 /* Seletores  */
->>>>>>> fda7cdfa3a436e80f64833253311ad9485600758
 body {
   background-color: dimgray;
   font-family: Arial, Helvetica, sans-serif;
@@ -34,7 +28,6 @@ a {
   color: inherit;
 }
 
-<<<<<<< HEAD
 header, main {
   margin: 10px;
   padding: 10px;
@@ -53,7 +46,7 @@ nav {
 
 nav > a {
   padding: 0px 10px;
-=======
+}
 header {
   justify-content: space-between;
 }
@@ -72,21 +65,17 @@ nav > a {
   padding: 10px 30px;
   background-color: rgb(28, 151, 145);
   box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.37);
->>>>>>> fda7cdfa3a436e80f64833253311ad9485600758
   color: white;
   font-weight: bold;
 }
 
 nav > a:hover {
   text-decoration: underline;
-<<<<<<< HEAD
-=======
   border-bottom: 3px solid white;
 }
 
 main {
   border-radius: 20px;
->>>>>>> fda7cdfa3a436e80f64833253311ad9485600758
 }
 
 section#principal {
