--- a/cursos/HTML5CSS3-na-pratica-01-Curso-em-Video/Módulo-02/desafios/desafios10/index.android.css
+++ b/cursos/HTML5CSS3-na-pratica-01-Curso-em-Video/Módulo-02/desafios/desafios10/index.android.css
@@ -30,7 +30,7 @@ header {
   box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.479);
 }
 
-.content-titulo{
+.content-titulo {
   padding-top: 25px;
   text-align: center;
 }
@@ -71,10 +71,56 @@ nav > a:hover {
 
 main {
   margin: auto;
-  height: 700px;
-  width: 500px;
+  width: 930px;
   background-color: white;
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.479);
+}
+
+section {
+  padding: 20px;
+}
+
+.destaque, span {
+  padding: 0px 20px;
+  color: var(--cor-segunda);
+}
+.destaque {
+  background: linear-gradient(to right, var(--cor-terceira) 20%, white);
+}
+span {
+  background: linear-gradient(to right, var(--cor-terceira) 80%, white);
+}
+
+.assunto-titulo, .assunto-sub-titulo {
+  font-family: idroid, Tahoma, Verdana, Geneva, sans-serif;
+  color: var(--cor-segunda);
+}
+
+.assunto-titulo {
+  font-size: 2.4em;
+}
+
+.assunto-sub-titulo {
+  font-size: 1.7em;
+}
+
+p {
+  font: normal bold 1.2em Tahoma, Verdana, Geneva, sans-serif;
+  text-indent: 50px;
+  color: rgba(0, 0, 0, 0.61);
+}
+
+strong {
+  font-weight: bolder;
+  color: var(--cor-segunda);
+}
+
+picture, .video-android {
+  display: flex; justify-content: center;
+}
+
+.video-android  {
+  background-color: var(--cor-segunda);
 }
 
 footer {
@@ -86,4 +132,10 @@ footer {
 
 footer > a {
   color: white;
+}
+
+@media only screen and (max-width: 800px) {
+  main {
+    width: auto;
+  }
 }
