Add: Teste para Variáveis do CSS principal

--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
+/* :root {
+  --cor-01: #F2F2F2;
+  --cor-02: #F2B199;
+  --cor-03: #F2695C;
+  --cor-04: #203A40;
+  --cor-05: #400101;
+} */
+
 :root {
   --nivel1-cor-01: rgba(255, 255, 255, 0.97);
   --nivel1-cor-02: rgba(255, 255, 255, 0.9);
